--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,3 +14,16 @@ jobs:
       matrix:
         os: [ubuntu-latest, windows-latest, macOS-latest]
         rust: [stable, beta, nightly]
+
+    steps:
+      - name: Mac CPU info
+        if: matrix.os == 'macOS-latest'
+        run: sysctl -a | grep machdep
+      - name: Lunix CPU info
+        if: matrix.os == 'ubuntu-latest'
+        run: cat /proc/cpuinfo
+      - uses: hecrj/setup-rust-action@v1
+        with:
+          rust-version: ${{ matrix.rust }}
+      - uses: actions/checkout@v1
+      - name: Run build
