--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,3 +27,5 @@ jobs:
           rust-version: ${{ matrix.rust }}
       - uses: actions/checkout@v1
       - name: Run build
+        working-directory: ./curve25519-fiat
+        run: cargo build
